# oarepo-model-builder-drafts-files

./: .gitignore  format.sh  run-tests.sh  run_tests.sh  setup.cfg  thesis.yaml
build-tests/: thesis.yaml
oarepo_model_builder_drafts_files/builders/: __init__.py  files_service_config_disable_upload.py  published_bucket_component.py
oarepo_model_builder_drafts_files/builders/templates/: published_bucket_component.py.jinja2
oarepo_model_builder_drafts_files/builders/tests/: __init__.py  test_resource.py  test_resource_input_data.py
oarepo_model_builder_drafts_files/builders/tests/templates/: test_files_resource.py.jinja2
oarepo_model_builder_drafts_files/datatypes/: __init__.py  draft_file.py
oarepo_model_builder_drafts_files/datatypes/components/: __init__.py  draft_file_profile.py  draft_files_tests.py  draft_service_ext.py  drafts_files_field.py  drafts_files_files.py  drafts_files_record.py  published_service.py
oarepo_model_builder_drafts_files/datatypes/components/model/: __init__.py  blueprints.py  defaults.py  ext_resource.py  marshmallow.py  pid.py  record.py  record_metadata.py  resource.py  service.py
oarepo_model_builder_drafts_files/model_preprocessors/: invenio_add_draft_files_component.py  invenio_drafts_files_draft.py
oarepo_model_builder_drafts_files/profiles/: draft_file.py  draft_files.py  drafts_files.py
oarepo_model_builder_drafts_files/tests/: __init__.py  invenio_drafts_test_resources.py
oarepo_model_builder_drafts_files/tests/templates/: invenio_test_files_resources.py.jinja2
