[metadata]
name = oarepo-model-builder-drafts-files
version = 1.0.0
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=3.1.0
    oarepo-model-builder>=3.1.2
    oarepo-model-builder-files
    oarepo-model-builder-drafts
#packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

#[options.packages.find]
#exclude = example_model

[options.entry_points]

oarepo_model_builder.builders.drafts_files:
    0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
    0130-invenio_record_schema  = oarepo_model_builder.invenio.invenio_record_schema:InvenioRecordSchemaBuilder
    0140-invenio_record_ui_schema  = oarepo_model_builder.invenio.invenio_record_ui_schema:InvenioRecordUISchemaBuilder
    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
    0340-invenio_record_dumper  = oarepo_model_builder.invenio.invenio_record_dumper:InvenioRecordDumperBuilder
    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
    0420-invenio_views  = oarepo_model_builder.invenio.invenio_views:InvenioViewsBuilder
    0430-ui_serializer  = oarepo_model_builder.invenio.invenio_record_ui_serializer:InvenioRecordUISerializerBuilder
    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder

    0610-invenio_ext_setup_cfg  = oarepo_model_builder.invenio.invenio_ext_setup_cfg:InvenioExtSetupCfgBuilder
    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder

    2000-invenio_files_record = oarepo_model_builder_files.invenio.invenio_files_record:InvenioFilesRecordBuilder
    2010-invenio_files_record_metadata = oarepo_model_builder_files.invenio.invenio_files_record_metadata:InvenioFilesRecordMetadataBuilder

    5000-invenio_drafts_files_test_resources = oarepo_model_builder_drafts_files.tests.invenio_drafts_test_resources:InvenioDraftsTestResourcesBuilder

oarepo_model_builder.model_preprocessors.drafts_files:
    05-invenio_drafts_files_draft = oarepo_model_builder_drafts_files.model_preprocessors.invenio_drafts_files_draft:InvenioDraftsFilesDraftModelPreprocessor
    10-invenio_files_before = oarepo_model_builder_files.model_preprocessors.invenio_files_before:InvenioModelFilesBeforePreprocessor
    11-default  = oarepo_model_builder.model_preprocessors.default_values:DefaultValuesModelPreprocessor
    12-invenio  = oarepo_model_builder.model_preprocessors.invenio:InvenioModelPreprocessor
    20-opensearch  = oarepo_model_builder.model_preprocessors.opensearch:OpensearchModelPreprocessor
    30-invenio_base_classes  = oarepo_model_builder.model_preprocessors.invenio_base_classes:InvenioBaseClassesModelPreprocessor
    30-invenio_files_base_classes = oarepo_model_builder_files.model_preprocessors.invenio_files_base_classes:InvenioModelFilesBaseClassesPreprocessor
    31-invenio_files_after = oarepo_model_builder_files.model_preprocessors.invenio_files_after:InvenioModelFilesAfterPreprocessor
    40-datatypes = oarepo_model_builder.model_preprocessors.datatype_default:DatatypeDefaultModelPreprocessor


oarepo_model_builder.templates =
    99-drafts_files_test_templates = oarepo_model_builder_drafts_files.tests

oarepo_model_builder.profiles =
    drafts_files = oarepo_model_builder_drafts_files.profiles.drafts_files:DraftsFilesProfile




