[metadata]
name = oarepo-model-builder-drafts-files
version = 1.0.0
description =
authors = Ronald Krist <krist@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder-tests>=4.0.0
    oarepo-model-builder>=4.0.0
    oarepo-model-builder-files
#    oarepo-model-builder-drafts
#packages = find:

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

#[options.packages.find]
#exclude = example_model

[options.entry_points]
oarepo_model_builder.datatypes.components =
    invenio_drafts_files = oarepo_model_builder_drafts_files.datatypes.components:DRAFTS_FILES_COMPONENTS

oarepo_model_builder.builders.files:
    5000-files-service-config-disable-upload = oarepo_model_builder_drafts_files.builders.files_service_config_disable_upload:FilesServiceConfigDisableUploadBuilder

#    0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
#    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
#    0130-invenio_record_schema  = oarepo_model_builder.invenio.invenio_record_schema:InvenioRecordSchemaBuilder
#    0140-invenio_record_ui_schema  = oarepo_model_builder.invenio.invenio_record_ui_schema:InvenioRecordUISchemaBuilder
#    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
#    0340-invenio_record_dumper  = oarepo_model_builder.invenio.invenio_record_dumper:InvenioRecordDumperBuilder
#    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
#    0420-invenio_views  = oarepo_model_builder.invenio.invenio_views:InvenioViewsBuilder
#    0430-ui_serializer  = oarepo_model_builder.invenio.invenio_record_ui_serializer:InvenioRecordUISerializerBuilder
#    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
#    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder

#    0610-invenio_ext_setup_cfg  = oarepo_model_builder.invenio.invenio_ext_setup_cfg:InvenioExtSetupCfgBuilder
#    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder

#    2000-invenio_files_record = oarepo_model_builder_files.invenio.invenio_files_record:InvenioFilesRecordBuilder
#    2010-invenio_files_record_metadata = oarepo_model_builder_files.invenio.invenio_files_record_metadata:InvenioFilesRecordMetadataBuilder

#    5000-invenio_drafts_files_test_resources = oarepo_model_builder_drafts_files.tests.invenio_drafts_test_resources:InvenioDraftsTestResourcesBuilder

oarepo_model_builder.builders.draft_file:
    0110-invenio_record  = oarepo_model_builder.invenio.invenio_record:InvenioRecordBuilder
    0120-invenio_record_metadata  = oarepo_model_builder.invenio.invenio_record_metadata:InvenioRecordMetadataBuilder
    0200-invenio_record_permissions  = oarepo_model_builder.invenio.invenio_record_permissions:InvenioRecordPermissionsBuilder
    0310-invenio_record_service_config  = oarepo_model_builder.invenio.invenio_record_service_config:InvenioRecordServiceConfigBuilder
    0320-invenio_record_service  = oarepo_model_builder.invenio.invenio_record_service:InvenioRecordServiceBuilder
    0400-invenio_record_resource_config  = oarepo_model_builder.invenio.invenio_record_resource_config:InvenioRecordResourceConfigBuilder
    0410-invenio_record_resource  = oarepo_model_builder.invenio.invenio_record_resource:InvenioRecordResourceBuilder
    0420-invenio_api_views  = oarepo_model_builder.invenio.invenio_api_views:InvenioAPIViewsBuilder
    0430-ui_serializer  = oarepo_model_builder.invenio.invenio_record_ui_serializer:InvenioRecordUISerializerBuilder
    0500-invenio_config  = oarepo_model_builder.invenio.invenio_config:InvenioConfigBuilder
    0600-invenio_ext  = oarepo_model_builder.invenio.invenio_ext:InvenioExtBuilder
    0610-invenio_ext_setup_cfg  = oarepo_model_builder.invenio.invenio_ext_setup_cfg:InvenioExtSetupCfgBuilder
    0930-invenio_resource_setup_cfg  = oarepo_model_builder.invenio.invenio_record_resource_setup_cfg:InvenioRecordResourceSetupCfgBuilder
    2010-invenio_files_record = oarepo_model_builder_files.builders.invenio.invenio_files_record:InvenioFilesRecordBuilder
    2010-invenio_files_record_metadata = oarepo_model_builder_files.builders.invenio.invenio_files_record_metadata:InvenioFilesRecordMetadataBuilder
    2030-invenio_files_parent_record = oarepo_model_builder_files.builders.invenio_parent.invenio_files_parent_record:InvenioFilesParentRecordBuilder
    5300-invenio_files_drats_test_files_resources = oarepo_model_builder_drafts_files.builders.tests.test_resource:TestResourcesBuilder

#oarepo_model_builder.templates =
#    99-drafts_files_test_templates = oarepo_model_builder_drafts_files.tests

oarepo_model_builder.profiles =
    draft_file = oarepo_model_builder_drafts_files.profiles.draft_file:DraftFileProfile

oarepo_model_builder.datatypes =
    invenio_files = oarepo_model_builder_drafts_files.datatypes:draft_file_datatypes

oarepo_model_builder.templates =
    99-draft_file_templates = oarepo_model_builder_drafts_files.builders
    99-draft_file_test_templates = oarepo_model_builder_drafts_files.builders.tests



